# shuyuan

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.monitoring.yml  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
admin/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
admin/app/: layout.tsx  page.tsx
admin/app/files/: page.tsx
admin/app/files/[id]/: page.tsx
admin/app/monitoring/: page.tsx
admin/app/settings/: page.tsx
admin/app/stats/: page.tsx
admin/components/dashboard/: recent-files.tsx  trend-chart.tsx
admin/components/layout/: header.tsx  sidebar.tsx
admin/components/providers/: query-provider.tsx
admin/lib/: query-keys.ts  utils.ts
admin/lib/api/: index.ts
admin/lib/hooks/: index.ts
admin/lib/types/: index.ts
app/: api.py  database.py  exceptions.py  models.py  services.py
app/core/: config.py  config_manager.py  config_reloader.py  config_watcher.py  crypto.py  error_handler.py  http_client.py  logger.py  oss_client.py  security.py
app/templates/: monitoring.html
docker/: Dockerfile.backend  Dockerfile.frontend  README.md
docs/: DEPLOYMENT.md  ERROR_CODES.md  TROUBLESHOOTING.md
grafana/dashboards/: tuchuang.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
tests/: conftest.py  test_crypto.py  test_security.py  test_services.py
