[project]
name = "tuchuang"
version = "1.0.0"
description = "企业级文件直链托管服务 - 支持加密、压缩、去重、OSS 云存储"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ========== Web 框架 ==========
    "fastapi>=0.128.0",           # 高性能异步 Web 框架
    "uvicorn>=0.40.0",            # ASGI 服务器
    "python-multipart>=0.0.21",   # 文件上传支持
    # ========== 数据处理 ==========
    "orjson>=3.11.5",             # 高性能 JSON 处理
    "aiofiles>=25.1.0",           # 异步文件操作
    "anyio>=4.0.0",               # 异步操作抽象层
    # ========== 数据库 ==========
    "aiosqlite>=0.19.0",          # 异步 SQLite 数据库
    # ========== 安全与加密 ==========
    "cryptography>=46.0.3",       # 加密库 (Fernet)
    # ========== 配置管理 ==========
    "python-dotenv>=1.2.1",       # .env 文件加载
    "pydantic>=2.0.0",            # 数据验证
    "pydantic-settings>=2.0.0",   # 配置管理
    # ========== HTTP 客户端 ==========
    "httpx>=0.28.1",              # 异步 HTTP 客户端
    # ========== 云存储 ==========
    "oss2>=2.18.0",               # 阿里云 OSS SDK
    # ========== 限流与缓存 ==========
    "redis>=7.1.0",               # Redis 客户端
    "slowapi>=0.1.9",             # API 限流
    # ========== 日志与监控 ==========
    "loguru>=0.7.3",              # 结构化日志
    "prometheus-fastapi-instrumentator>=7.1.0",  # Prometheus 监控
    "psutil>=6.1.0",              # 系统信息（CPU、内存）
    # ========== 性能优化 ==========
    "uvloop>=0.22.1; sys_platform != 'win32'",  # 事件循环优化 (仅 Linux/macOS)
    "cachetools>=6.2.4",
    # ========== 配置热重载 ==========
    "watchdog>=5.0.0",                         # 文件系统监听（用于配置热重载）
]

[project.optional-dependencies]
# ========== 开发和测试依赖 ==========
dev = [
    "pytest>=8.0.0",              # 测试框架
    "pytest-asyncio>=0.24.0",     # 异步测试支持
    "pytest-cov>=6.0.0",          # 覆盖率统计
    "httpx>=0.28.1",              # HTTP 客户端 (用于测试 FastAPI)
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
